--- a/index.html
+++ b/index.html
@@ -1,7 +1,222 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Hello</title></head>
-  <body>
-    <h1>Hello from GitHub Pages!</h1>
-  </body>
+<html lang="en" data-color-scheme="dark">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Venkatram S - IoT Student & Developer</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar" id="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <a href="#home">Venkatram S</a>
+            </div>
+            <div class="nav-menu" id="nav-menu">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1 class="hero-name">Venkatram S</h1>
+            <h2 class="hero-title">B.E. CSE (IoT) Student</h2>
+            <div class="hero-subtitle">
+                <span class="typing-text" id="typing-text"></span>
+                <span class="cursor">|</span>
+            </div>
+            <p class="hero-description">
+                Passionate about IoT, coding, system design, and console-first workflows. 
+                I thrive on building smart, connected systems and exploring how technology can streamline everyday tasks.
+            </p>
+            <div class="hero-buttons">
+                <a href="#projects" class="btn btn--primary">View Projects</a>
+                <a href="#contact" class="btn btn--outline">Get In Touch</a>
+            </div>
+        </div>
+        <div class="hero-scroll">
+            <span>Scroll Down</span>
+            <div class="scroll-indicator"></div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section">
+        <div class="container">
+            <h2 class="section-title fade-in">About Me</h2>
+            <div class="about-content">
+                <div class="about-text fade-in">
+                    <p>
+                        I am a second-year B.E. Computer Science Engineering (IoT) student at Sri Sairam Institute of Technology, Chennai. 
+                        Fascinated by how connected devices shape our world, I enjoy exploring the intersection of IoT, automation, and data-driven decision making.
+                    </p>
+                    <p>
+                        I have hands-on experience with Python, Selenium, and data visualization tools, and I'm continuously building my problem-solving 
+                        and automation skills through coursework and online certifications, including NPTEL's 'The Joy of Computing using Python'.
+                    </p>
+                    <p>
+                        My strengths include analytical thinking, effective communication, and a willingness to learn and adapt. I am eager to apply 
+                        my skills in real-world settings through internships, collaborative projects, or research opportunities related to IoT, automation, or software development.
+                    </p>
+                </div>
+                <div class="about-details fade-in">
+                    <div class="detail-card">
+                        <h3>Education</h3>
+                        <p><strong>Bachelor of Engineering (B.E.)</strong></p>
+                        <p>Computer Science Engineering (IoT)</p>
+                        <p>Sri Sairam Institute of Technology</p>
+                        <p>Sophomore (2nd Year) | 2024-2028</p>
+                    </div>
+                    <div class="detail-card">
+                        <h3>Hobbies & Interests</h3>
+                        <div class="hobby-tags">
+                            <span class="tag">Coding</span>
+                            <span class="tag">Video Editing</span>
+                            <span class="tag">Canva Design</span>
+                            <span class="tag">Music</span>
+                            <span class="tag">Movies</span>
+                        </div>
+                    </div>
+                    <div class="detail-card">
+                        <h3>Certifications</h3>
+                        <p>• NPTEL - The Joy of Computing using Python</p>
+                        <p>• NPTEL - Enhancing Soft Skills and Personality</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="section">
+        <div class="container">
+            <h2 class="section-title fade-in">Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card fade-in">
+                    <div class="project-header">
+                        <h3>SwiftHaulX</h3>
+                        <span class="status-badge">Currently Working On</span>
+                    </div>
+                    <div class="project-category">Smart City Solutions</div>
+                    <p class="project-description">
+                        An automated garbage truck system designed to revolutionize urban waste management. 
+                        This project combines IoT sensors, automation, and smart routing to create an efficient, autonomous waste collection solution.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">IoT</span>
+                        <span class="tech-tag">Automation</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Arduino</span>
+                    </div>
+                </div>
+                <div class="project-card fade-in">
+                    <div class="project-header">
+                        <h3>TranzportX</h3>
+                        <span class="status-badge">Currently Working On</span>
+                    </div>
+                    <div class="project-category">Logistics & Automation</div>
+                    <p class="project-description">
+                        A comprehensive drone-based delivery network project aimed at building a reliable and futuristic logistics system for lightweight goods. 
+                        Features smart routing, real-time tracking, and automated dispatch systems.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Drone Technology</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">System Design</span>
+                        <span class="tech-tag">IoT</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="section">
+        <div class="container">
+            <h2 class="section-title fade-in">Skills</h2>
+            <div class="skills-content">
+                <div class="skills-category fade-in">
+                    <h3>Technical Skills</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item">Python</div>
+                        <div class="skill-item">Automation</div>
+                        <div class="skill-item">IoT Development</div>
+                        <div class="skill-item">System Design</div>
+                        <div class="skill-item">Data Visualization</div>
+                        <div class="skill-item">Arduino</div>
+                        <div class="skill-item">Selenium</div>
+                        <div class="skill-item">C Programming</div>
+                    </div>
+                </div>
+                <div class="skills-category fade-in">
+                    <h3>Soft Skills</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item">Problem Solving</div>
+                        <div class="skill-item">Presentation Skills</div>
+                        <div class="skill-item">Interpersonal Skills</div>
+                        <div class="skill-item">Analytical Thinking</div>
+                        <div class="skill-item">Effective Communication</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+        <div class="container">
+            <h2 class="section-title fade-in">Get In Touch</h2>
+            <div class="contact-content fade-in">
+                <p class="contact-text">
+                    I'm always interested in connecting with fellow developers, industry professionals, and potential collaborators. 
+                    Whether you have a project in mind, want to discuss IoT innovations, or just want to say hello, feel free to reach out!
+                </p>
+                <div class="contact-links">
+                    <a href="mailto:venkatram@example.com" class="contact-link" target="_blank">
+                        <div class="contact-icon">✉</div>
+                        <div class="contact-info">
+                            <h4>Email</h4>
+                            <p>venkatram@example.com</p>
+                        </div>
+                    </a>
+                    <a href="https://linkedin.com/in/venkatram-s" class="contact-link" target="_blank">
+                        <div class="contact-icon">💼</div>
+                        <div class="contact-info">
+                            <h4>LinkedIn</h4>
+                            <p>linkedin.com/in/venkatram-s</p>
+                        </div>
+                    </a>
+                    <a href="https://github.com/venkatram-s" class="contact-link" target="_blank">
+                        <div class="contact-icon">💻</div>
+                        <div class="contact-info">
+                            <h4>GitHub</h4>
+                            <p>github.com/venkatram-s</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Venkatram S. Built with passion for clean code and IoT innovation.</p>
+        </div>
+    </footer>
+
+    <script src="app.js"></script>
+</body>
 </html>
