--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venkatram S - IoT Student & Developer</title>
+    <title>Venkatram S - A Sophomore Student</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,14 +32,14 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-name">Venkatram S</h1>
-            <h2 class="hero-title">B.E. CSE (IoT) Student</h2>
+            <h2 class="hero-title">A Sophomore Student pursuing B.E. CSE (Internet of Things)</h2>
             <div class="hero-subtitle">
                 <span class="typing-text" id="typing-text"></span>
                 <span class="cursor">|</span>
             </div>
             <p class="hero-description">
-                Passionate about IoT, coding, system design, and console-first workflows. 
-                I thrive on building smart, connected systems and exploring how technology can streamline everyday tasks.
+                I am passionate student about IoT, coding, software developement, 
+                and I am currently exploring how technology can streamline everyday tasks.
             </p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn--primary">View Projects</a>
@@ -59,40 +59,40 @@
             <div class="about-content">
                 <div class="about-text fade-in">
                     <p>
-                        I am a second-year B.E. Computer Science Engineering (IoT) student at Sri Sairam Institute of Technology, Chennai. 
+                        I am a second-year B.E. Computer Science Engineering (IoT) student at Sri Sai Ram Institute of Technology, Chennai. 
                         Fascinated by how connected devices shape our world, I enjoy exploring the intersection of IoT, automation, and data-driven decision making.
                     </p>
                     <p>
-                        I have hands-on experience with Python, Selenium, and data visualization tools, and I'm continuously building my problem-solving 
+                        I have hands-on experience with Python, C, data visualization tools, and I'm continuously building my problem-solving 
                         and automation skills through coursework and online certifications, including NPTEL's 'The Joy of Computing using Python'.
                     </p>
                     <p>
-                        My strengths include analytical thinking, effective communication, and a willingness to learn and adapt. I am eager to apply 
-                        my skills in real-world settings through internships, collaborative projects, or research opportunities related to IoT, automation, or software development.
+                        My strengths include effective communication, and a willingness to learn and adapt. I am eager to apply 
+                        my skills in real-world settings through internships, collaborative projects, or research opportunities related to my interests.
                     </p>
                 </div>
                 <div class="about-details fade-in">
                     <div class="detail-card">
                         <h3>Education</h3>
                         <p><strong>Bachelor of Engineering (B.E.)</strong></p>
-                        <p>Computer Science Engineering (IoT)</p>
-                        <p>Sri Sairam Institute of Technology</p>
+                        <p>Computer Science Engineering (Internet of Things)</p>
+                        <p>Sri Sai Ram Institute of Technology</p>
                         <p>Sophomore (2nd Year) | 2024-2028</p>
                     </div>
                     <div class="detail-card">
                         <h3>Hobbies & Interests</h3>
                         <div class="hobby-tags">
                             <span class="tag">Coding</span>
-                            <span class="tag">Video Editing</span>
-                            <span class="tag">Canva Design</span>
-                            <span class="tag">Music</span>
-                            <span class="tag">Movies</span>
+                            <span class="tag">Graphic Design</span>
+                            <span class="tag">Movies & Music</span>
+                            <span class="tag">Content Creation</span>
                         </div>
                     </div>
                     <div class="detail-card">
                         <h3>Certifications</h3>
-                        <p>• NPTEL - The Joy of Computing using Python</p>
-                        <p>• NPTEL - Enhancing Soft Skills and Personality</p>
+                        <p>• <a href="https://internalapp.nptel.ac.in/NOC/NOC25/SEM1/Ecertificates/106/noc25-cs69/Course/NPTEL25CS69S74320075004461097.pdf">NPTEL - The Joy of Computing using Python</a></p>
+<p>• <a href="https://internalapp.nptel.ac.in/NOC/NOC25/SEM1/Ecertificates/109/noc25-hs87/Course/NPTEL25HS87S104320254904461097.pdf">NPTEL - Enhancing Soft Skills and Personality</a></p>
+
                     </div>
                 </div>
             </div>
@@ -106,23 +106,6 @@
             <div class="projects-grid">
                 <div class="project-card fade-in">
                     <div class="project-header">
-                        <h3>SwiftHaulX</h3>
-                        <span class="status-badge">Currently Working On</span>
-                    </div>
-                    <div class="project-category">Smart City Solutions</div>
-                    <p class="project-description">
-                        An automated garbage truck system designed to revolutionize urban waste management. 
-                        This project combines IoT sensors, automation, and smart routing to create an efficient, autonomous waste collection solution.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">IoT</span>
-                        <span class="tech-tag">Automation</span>
-                        <span class="tech-tag">Python</span>
-                        <span class="tech-tag">Arduino</span>
-                    </div>
-                </div>
-                <div class="project-card fade-in">
-                    <div class="project-header">
                         <h3>TranzportX</h3>
                         <span class="status-badge">Currently Working On</span>
                     </div>
@@ -133,9 +116,9 @@
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Drone Technology</span>
-                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Machine Learning</span>
                         <span class="tech-tag">System Design</span>
-                        <span class="tech-tag">IoT</span>
+                        <span class="tech-tag">IoV (Internet of Vehicles)</span>
                     </div>
                 </div>
             </div>
@@ -155,9 +138,8 @@
                         <div class="skill-item">IoT Development</div>
                         <div class="skill-item">System Design</div>
                         <div class="skill-item">Data Visualization</div>
-                        <div class="skill-item">Arduino</div>
-                        <div class="skill-item">Selenium</div>
                         <div class="skill-item">C Programming</div>
+                        <div class="skill-item">Java Programming</div>
                     </div>
                 </div>
                 <div class="skills-category fade-in">
@@ -181,14 +163,13 @@
             <div class="contact-content fade-in">
                 <p class="contact-text">
                     I'm always interested in connecting with fellow developers, industry professionals, and potential collaborators. 
-                    Whether you have a project in mind, want to discuss IoT innovations, or just want to say hello, feel free to reach out!
+                    Whether you have a project in mind, or just want to say hello, feel free to reach out!
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:venkatram@example.com" class="contact-link" target="_blank">
+                    <a href="mailto:venkatram.cse.iot@gmail.com" class="contact-link" target="_blank">
                         <div class="contact-icon">✉</div>
                         <div class="contact-info">
                             <h4>Email</h4>
-                            <p>venkatram@example.com</p>
                         </div>
                     </a>
                     <a href="https://linkedin.com/in/venkatram-s" class="contact-link" target="_blank">
@@ -198,11 +179,27 @@
                             <p>linkedin.com/in/venkatram-s</p>
                         </div>
                     </a>
+                    <a href="https://www.instagram.com/thatsme_venkat/" class="contact-link" target="_blank">
+                        <div class="contact-icon">📸</div>
+                        <div class="contact-info">
+                            <h4>Instagram</h4>
+                        </div>
                     <a href="https://github.com/venkatram-s" class="contact-link" target="_blank">
                         <div class="contact-icon">💻</div>
                         <div class="contact-info">
                             <h4>GitHub</h4>
-                            <p>github.com/venkatram-s</p>
+                        </div>
+                    </a>
+<a href="https://leetcode.com/venkatram-s" class="contact-link" target="_blank">
+                        <div class="contact-icon">🧠</div>
+                        <div class="contact-info">
+                            <h4>Leetcode</h4>
+                        </div>
+                    </a>
+                    <a href="http://bit.ly/45CFq0H" class="contact-link" target="_blank">
+                        <div class="contact-icon">🧠</div>
+                        <div class="contact-info">
+                            <h4>Skillrack</h4>
                         </div>
                     </a>
                 </div>
@@ -213,7 +210,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Venkatram S. Built with passion for clean code and IoT innovation.</p>
+            <p>&copy; 2025 Venkatram S</p>
         </div>
     </footer>
 
